logs/dag_id=Postgres_dag/run_id=manual__2024-07-15T161324.398690+0000/task_id=insert_into_table/attempt=1.log
[2024-07-15T16:13:26.826+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-07-15T16:13:26.861+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Postgres_dag.insert_into_table manual__2024-07-15T16:13:24.398690+00:00 [queued]>
[2024-07-15T16:13:26.872+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Postgres_dag.insert_into_table manual__2024-07-15T16:13:24.398690+00:00 [queued]>
[2024-07-15T16:13:26.873+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 6
[2024-07-15T16:13:26.919+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): insert_into_table> on 2024-07-15 16:13:24.398690+00:00
[2024-07-15T16:13:26.925+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'Postgres_dag', 'insert_into_table', 'manual__2024-07-15T16:13:24.398690+00:00', '--job-id', '29', '--raw', '--subdir', 'DAGS_FOLDER/dag_with_postgres.py', '--cfg-path', '/tmp/tmp744r4ems']
[2024-07-15T16:13:26.928+0000] {standard_task_runner.py:91} INFO - Job 29: Subtask insert_into_table
[2024-07-15T16:13:26.930+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=1144) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-07-15T16:13:26.931+0000] {standard_task_runner.py:63} INFO - Started process 1145 to run task
[2024-07-15T16:13:26.999+0000] {task_command.py:426} INFO - Running <TaskInstance: Postgres_dag.insert_into_table manual__2024-07-15T16:13:24.398690+00:00 [running]> on host 32f997017b5a
[2024-07-15T16:13:27.146+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Rayzo' AIRFLOW_CTX_DAG_ID='Postgres_dag' AIRFLOW_CTX_TASK_ID='insert_into_table' AIRFLOW_CTX_EXECUTION_DATE='2024-07-15T16:13:24.398690+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-07-15T16:13:24.398690+00:00'
[2024-07-15T16:13:27.148+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-07-15T16:13:27.163+0000] {sql.py:276} INFO - Executing:  
        insert into table drag_runs(dt,dag_id) values('2024-07-15', 'Postgres_dag')
        
[2024-07-15T16:13:27.171+0000] {base.py:84} INFO - Using connection ID 'Postgres_con' for task execution.
[2024-07-15T16:13:27.179+0000] {base.py:84} INFO - Using connection ID 'Postgres_con' for task execution.
[2024-07-15T16:13:27.194+0000] {sql.py:487} INFO - Running statement:  
        insert into table drag_runs(dt,dag_id) values('2024-07-15', 'Postgres_dag')
        , parameters: None
[2024-07-15T16:13:27.199+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-07-15T16:13:27.200+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "table"
LINE 2:         insert into table drag_runs(dt,dag_id) values('2024-...
                            ^

[2024-07-15T16:13:27.209+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=Postgres_dag, task_id=insert_into_table, run_id=manual__2024-07-15T16:13:24.398690+00:00, execution_date=20240715T161324, start_date=20240715T161326, end_date=20240715T161327
[2024-07-15T16:13:27.260+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 29 for task insert_into_table (syntax error at or near "table"
LINE 2:         insert into table drag_runs(dt,dag_id) values('2024-...
                            ^
; 1145)
[2024-07-15T16:13:27.267+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-07-15T16:13:27.288+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-07-15T16:13:27.334+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
